--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -69,7 +69,7 @@
 	@media screen and (min-width: 768px) {
 		grid-template-columns: minmax(80px, auto) 1fr 1fr;
 		grid-template-areas: "date title title"
-							 "logistics logistics detail";
+							 ".... logistics detail";
 	}
 }
 
