--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -86,6 +86,7 @@
 	border: 2px solid magenta;
 	border-radius: 50%;
 	div {
+		font-weight: bold;
 		line-height: 1;
 		text-align: center;
 		text-transform: uppercase;
@@ -93,6 +94,9 @@
 	@media screen and (min-width: 768px) {
 		width: 72px;
 		height: 72px;
+		font-family: "Oswald", sans-serif;
+	//	font-family: "base-mono-wide", monospace;
+		font-size: 1.25rem;
 	}
 }
 
