Set max content width (not incl. padding) to 800px

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -8,7 +8,7 @@
 		padding-top: calc(3rem + 60px); // 2 line heights
 	}
 	@media screen and (min-width: 1024px) {
-	//	max-width: calc(960px + 16.67%);
+		max-width: calc(800px + 16.67%);
 	//	margin: 0 auto;
 	}
 }
