--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -105,6 +105,7 @@
 .events-item__title {
 	grid-area: title;
 	margin-left: .5em;
+	font-family: "Oswald", sans-serif;
 	font-size: 2rem;
 	font-weight: 900;
 }
