Add media query for placement of button link

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -135,7 +135,11 @@
 	grid-area: detail;
 	margin: 0 !important;
 	a {
-		float: right;
-
+	//	float: right;
+	}
+	@media screen and (min-width: 768px) {
+		a {
+			float: right;
+		}
 	}
 }
