--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -137,6 +137,11 @@
 	margin: 0 !important;
 	a {
 	//	float: right;
+	@media screen and (max-width: 767px) {
+		a {
+			width: 100% !important;
+			text-align: center;
+		}
 	}
 	@media screen and (min-width: 768px) {
 		a {
