--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -83,6 +83,8 @@
 	justify-content: center;
 	width: 60px;
 	height: 60px;
+	margin-right: 1rem;
+	margin-bottom: 1rem;
 	border: 2px solid magenta;
 	border-radius: 50%;
 	div {
