--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -1,15 +1,14 @@
 /* Events Page: */
 
 .events-wrapper {
-	padding: 0 4.167%;
+	padding: 0 8.33%;
 	padding-top: calc(1em + 60px);
 	@media screen and (min-width: 600px) {
-		padding: 0 8.33%;
 		padding-top: calc(3rem + 60px); // 2 line heights
 	}
 	@media screen and (min-width: 1024px) {
 		max-width: calc(800px + 16.67%);
-	//	margin: 0 auto;
+		margin: 0 auto;
 	}
 }
 
