Change span dimensions from rems to ems

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -127,9 +127,9 @@
 	line-height: 1;
 	span {
 		display: inline-block;
-		width: calc(7ch + .5rem);
+		width: calc(7ch + .5em);
 		padding-bottom: .5em;
-		padding-right: .5rem;
+		padding-right: .5em;
 		float: left;
 		font-weight: 900;
 		text-transform: uppercase;
