--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -101,6 +101,8 @@
 	@media screen and (min-width: 768px) {
 		width: 72px;
 		height: 72px;
+		margin-right: 2.25rem;
+		margin-bottom: 20px; //2.25rem;
 		font-size: 1.25rem;
 	}
 }
