Change event title margins to relative units

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -112,7 +112,7 @@
 .events-item__title {
 	grid-area: title;
 	align-self: center;
-	margin-bottom: 1rem;
+	margin-bottom: .5em;
 	font-family: "Oswald", sans-serif;
 	font-size: 1.75rem;
 	font-weight: 600;
