--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -65,6 +65,7 @@
 						 "logistics logistics"
 						 "detail detail";
 	margin-bottom: 1.75rem;
+	border-bottom: 1px solid rgba(0,0,0,.5);
 	@media screen and (min-width: 768px) {
 		grid-template-columns: minmax(80px, auto) 1fr minmax(164px, auto);
 		grid-template-areas: "date title detail"
