Make 'when'/'where' labels .5 opacity black (vs 1.0)

--- a/assets/css/_sass/_events.scss
+++ b/assets/css/_sass/_events.scss
@@ -142,6 +142,7 @@
 		float: left;
 		font-weight: 900;
 		text-transform: uppercase;
+		color: rgba(0,0,0,.5);
 	}
 	@media screen and (min-width: 768px) {
 		margin-right: 1em;
