Replace dummy links with actual page links in footer 'Explore'
- Link to various pages within site; had just been "#"

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,10 @@
     <div class="footer__sitemap">
       <div class="footer-map__title">Explore</div>
       <div class="footer-map__links">
-        <a href="#">Home</a>
-        <a href="#">FAQ</a>
-        <a href="#">Hours & Spaces</a>
-        <a href="#">Events</a>
+        <a href="{{ site.url }}">Home</a>
+        <a href="{{ site.url }}/faq">FAQ</a>
+        <a href="{{ site.url }}/hours-and-spaces">Hours & Spaces</a>
+        <a href="{{ site.url }}/events">Events</a>
       </div>
     </div>
 
