--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="footer__logos">
-      <a href="#" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
+      <a href="{{ site.url }}" class="footer-logo__slab" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
       <span>proudly part of</span>
       <a href="https://www.library.virginia.edu/" class="footer-logo__uva" aria-label="UVA Library home"><img src="{{ '/assets/img/uva-library-text-block-white.svg' | relative_url }}" alt="UVA Library logo"></a>
     </div>
