--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -22,10 +22,12 @@
 
 .footer-wrapper {
 //	margin-top: 2rem;
-	padding: 1rem 4.167%;
+	padding: 1.5rem 4.167%;
+	padding-top: 1rem;
 	background-color: rgba(0,0,0,1);
 	@media screen and (min-width: 900px) {
-		padding: 1rem 8.33%;
+		padding: 1.5rem 8.33%;
+		padding-top: 1rem;
 	}	
 }
 
@@ -95,7 +97,7 @@
 	position: relative;
 	@media screen and (max-width: 767px) {
 		justify-self: center;
-		width: 250px;
+		width: 83.33%;
 		margin-bottom: 1em;
 	}
 	@media screen and (min-width: 768px) {
@@ -116,13 +118,13 @@
 
 .footer__sitemap {
 	grid-area: site;
-	width: 100%;
-	@media screen and (min-width: 600px) {
-		max-width: 75%;
-	}
+	width: 83.33%;
 	@media screen and (max-width: 767px) {
 		justify-self: center;
-		margin: 1em 0;
+		margin: 1.5em 0 1em 0;
+	}
+	@media screen and (max-width: 400px) {
+		width: 100%;
 	}
 }
 
@@ -135,7 +137,6 @@
 .footer-map__links {
 	a {
 		display: inline-block;
-		padding-right: 1em;
 		&:first-of-type {
 			color: magenta;
 		}
@@ -143,7 +144,7 @@
 	@media screen and (max-width: 767px) {
 		display: flex;
 		flex-flow: row wrap;
-		justify-content: space-around;
+		justify-content: space-between;
 	}
 	@media screen and (min-width: 768px) {
 		a {
@@ -156,8 +157,8 @@
 
 .footer__contact {
 	grid-area: contact;
-	max-width: 250px;
 	text-align: right;
+	max-width: 300px;
 	div:first-of-type {
 		text-align: left; //title 
 	}
@@ -165,6 +166,9 @@
 		float: left;
 		font-family: "Raleway", sans-serif;
 		font-weight: normal;
+	}
+	@media screen and (min-width: 768px) {
+		max-width: 250px;
 	}
 }
 
@@ -195,10 +199,12 @@
 
 .footer__connect {
 	grid-area: connect;
-	max-width: 250px;
+	max-width: 300px;
 	@media screen and (min-width: 768px) {
 		justify-self: end;
+		max-width: 250px;
 	}
+
 }
 
 .footer-connect__title {
@@ -258,7 +264,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
-	margin-top: 2em;
+	margin-top: 2rem;
 	a {
 		display: inline-block;
 		&:first-of-type {
