--- a/assets/css/_sass/_footer.scss
+++ b/assets/css/_sass/_footer.scss
@@ -158,7 +158,7 @@
 .footer__contact {
 	grid-area: contact;
 	text-align: right;
-	max-width: 300px;
+	max-width: 83.33%;
 	div:first-of-type {
 		text-align: left; //title 
 	}
@@ -199,7 +199,7 @@
 
 .footer__connect {
 	grid-area: connect;
-	max-width: 300px;
+	max-width: 83.33%;
 	@media screen and (min-width: 768px) {
 		justify-self: end;
 		max-width: 250px;
