--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,10 +28,7 @@ body {
 }
 
 main {
-	padding-top: calc(1rem + 60px);
-	@media screen and (min-width: 600px) {
-		padding-top: calc(3rem + 60px); // 2 line heights
-	}
+	padding-top: 60px;
 }
 
 .home-landing-grid {
