--- a/assets/css/_sass/_person.scss
+++ b/assets/css/_sass/_person.scss
@@ -20,10 +20,10 @@
 
 .person-wrapper {
 	padding: 0 4.167%;
-	padding-top: calc(1em + 60px);
+	padding-top: 1em;
 	@media screen and (min-width: 600px) {
 		padding: 0 8.33%;
-		padding-top: calc(3rem + 60px); // 2 line heights
+		padding-top: 3rem; // 2 line heights
 	}
 }
 
