Subtract navbar height from top on fake ppl, prog tracker, & blog post

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -40,7 +40,7 @@
 	position: relative;
 	grid-area: title;
 	margin-bottom: .5em;
-	margin-top: calc(60px + 1em);
+	margin-top: 1em;
 	font-size: 3rem;
 	font-weight: 900;
 	line-height: 1;
