Remove string 'blog' from post layout class to avoid CSS selector overlap

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign authors = site.people | where: "slug", page.author %}
 
-<article class="blog-post-wrapper">
+<article class="post-wrapper">
 
   <div class="post-main-content">
 
