Adds Makerspace calendar.
- Removes placeholder table.
- Fixes #117.

--- a/assets/css/_sass/_makerspace.scss
+++ b/assets/css/_sass/_makerspace.scss
@@ -162,6 +162,7 @@
 		grid-template-columns: 1fr 1fr;
 		grid-template-areas: "ethos hours"
 							 "people usage"
+                             "calendar calendar"
 							"invent invent"
 							"public diagram"
 							"question question";
@@ -304,6 +305,10 @@
 
 .maker-usage__content {
 
+}
+
+.makerspace__calendar {
+    grid-area: calendar;
 }
 
 /* Inventory: */
