Update blog post SCSS - forgot to change class name in that

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -15,7 +15,7 @@
 
 /* Main Content */
 
-.blog-post-wrapper {
+.post-wrapper {
 	position: relative;
 	padding: 0em 4.167%;
 	@media screen and (min-width: 600px) {
