--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -19,11 +19,30 @@
 }
 
 .blog-header__big-title {
-
+	position: relative;
+	font-size: 3rem;
+	font-weight: 900;
+	@media screen and (min-width: 600px) {
+		font-size: 5rem;
+	}
+	@media screen and (min-width: 900px) {
+		font-size: 6rem;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 7rem;
+	}
 }
 
 .blog-header__subtitle {
-
+	margin-bottom: 1em;
+	font-size: 1rem;
+	font-weight: 200;
+	font-family: "base-mono-narrow", monospace;
+	line-height: 1;
+	color: rgba(0,0,0,.5);
+	@media screen and (min-width: 900px) {
+		font-size: 2rem;
+	}
 }
 
 /* Main Content: */
