--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -58,6 +58,21 @@
 /* Item: */
 
 .blog-gallery__item {
+	position: relative;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-areas: "title"
+						 "author"
+						 "date"
+						 "tags"
+						 "button";
+	@media screen and (min-width: 768px) {
+		grid-template-columns: 1fr 1fr;
+		grid-template-areas: "title title"
+							 "author date"
+							 "tags button";
+		
+	}
 
 }
 
