--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -79,7 +79,19 @@
 /* Title: */
 
 .blog-item__title {
-
+	grid-area: title;
+	margin-bottom: .5em;
+	font-family: "Oswald", sans-serif;
+	font-size: 1.75rem;
+	font-weight: 600;
+	line-height: 1;
+	a {
+		text-decoration: none;
+		color: black;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 2.25rem;
+	}
 }
 
 /* Author: */
