Assign grid areas to component elems of blog post

--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -97,23 +97,23 @@
 /* Author: */
 
 .blog-item__author {
-
+	grid-area: author;
 }
 
 /* Date */
 
 .blog-item__date {
-
+	grid-area: date;
 }
 
 /* Tags: */
 
 .blog-item__tags {
-
+	grid-area: tags;
 }
 
 /* Link to post: */
 
 .blog-item__cta {
-
+	grid-area: button;
 }
