--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -179,8 +179,8 @@ main {
 		line-height: 1;
 		text-decoration: none;
 		text-transform: uppercase;
-		color: cyan;
-		border: 2px solid cyan;
+		color: hsla(186,80%,70%,1);
+		border: 2px solid hsla(186,80%,70%,1);
 		&:hover, &:focus {
 			background-color: transparent !important;
 		}
