--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -13,6 +13,9 @@
 		text-transform: uppercase;
 		color: rgba(0,0,0,.5);
 	}
+	@media screen and (min-width: 768px) {
+		font-size: 1.25rem;
+	}
 }
 
 .blog-wrapper {
