--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -6,17 +6,22 @@
 	span {
 		display: inline-block;
 		width: calc(7ch + .5em);
-		padding-bottom: .5em;
-		padding-right: .5em;
+	//	padding-right: .5em;
 		float: left;
 		font-weight: 900;
 		text-transform: uppercase;
 		color: rgba(0,0,0,.5);
 	}
+	a {
+		text-decoration: none;
+		color: black;
+	}
 	@media screen and (min-width: 768px) {
 		font-size: 1.25rem;
 	}
 }
+
+/* Main Styles: */
 
 .blog-wrapper {
 	padding: 0 8.33%;
