--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -10,6 +10,9 @@
 	@media screen and (min-width: 768px) {
 		font-size: 1.25rem;
 	}
+	@media screen and (min-width: 1024px) {
+		align-self: start;
+	}
 }
 
 /* Main Styles: */
