--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -85,6 +85,7 @@
 						 "author date ....";
 	margin-bottom: 1.75rem;
 	padding: 1.3125rem;
+	border: 1px solid hsla(186,80%,70%,1);
 	@media screen and (min-width: 1024px) {
 		margin-bottom: 2.5rem;
 		padding: 1.875rem;
