Change font size breakpoints on post titles

--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -106,7 +106,12 @@
 		color: black;
 	}
 	@media screen and (min-width: 768px) {
-		font-size: 2.25rem;
+		font-size: 2rem;
+	}
+	@media screen and (min-width: 1024px) {
+		font-size: 2.5rem;
+	}
+}
 	}
 }
 
