--- a/assets/css/_sass/_blog.scss
+++ b/assets/css/_sass/_blog.scss
@@ -112,6 +112,15 @@
 		font-size: 2.5rem;
 	}
 }
+
+/* Pull Quote: */
+
+.blog-item__quote {
+	grid-area: pull;
+	display: none;
+	@media screen and (min-width: 1024px) {
+		display: initial;
+		margin-bottom: 1em;
 	}
 }
 
