Increase spacing/padding

--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -16,7 +16,7 @@
 	left: 0;
 	height: 60px;
 	width: 100%;
-	padding: 0 4.167% 0 calc(4.167% / 2);
+	padding: 0 4.167%;
 	background-color: black;
 	z-index: 5;
 	a {
@@ -52,7 +52,7 @@
 	list-style-type: none;
 	li {
 		display: inline-block;
-		padding-right: 1em;
+		padding-right: 2em;
 		a {
 			display: block;
 		}
