--- a/assets/css/_sass/_research.scss
+++ b/assets/css/_sass/_research.scss
@@ -86,6 +86,7 @@
 	position: relative;
 	padding: 1em 4.167%;
 	background-color: rgba(0,0,0,.9);
+	color: white;
 	@media screen and (min-width: 600px) {
 	//	padding: 1em 8.33%;
 	}
