Move/rotate original cube to look nice with new cube
- Again, rotation is for parallel lines b/t cubes

--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -98,13 +98,17 @@
 
 .spatial-landing__lines1 {
 	grid-area: lines1;
-	align-self: end;
+	align-self: start;
+	position: relative;
+	top: -36px;
+	left: 72px;
 	grid-auto-columns: 72px;
 	grid-auto-rows: 72px;
 	grid-template-areas: ". . one one ."
 						 ". four four . five"
 						 ". eight eight nine five"
 						 ". eight eight nine .";
+	transform: rotate(45deg);
 	div {
 		align-self: start;
 		background-color: magenta;
