Set up rest of STech CSS selectors using Python script

--- a/assets/css/_sass/_spatial-tech.scss
+++ b/assets/css/_sass/_spatial-tech.scss
@@ -313,3 +313,170 @@
 	//	width: 75%;
 	}
 }
+
+/* Main Content: */
+
+.spatial-main-content {
+
+}
+
+.spatial__mission {
+
+}
+
+.spatial-mission__title {
+
+}
+
+.spatial-mission__text {
+
+}
+
+.spatial__starting {
+
+}
+
+.spatial-starting__title {
+
+}
+
+.spatial-starting__how {
+
+}
+
+.spatial-starting__chi {
+
+}
+
+.spatial-starting__gis {
+
+}
+
+.spatial__faq {
+
+}
+
+.spatial-faq__title {
+
+}
+
+.spatial-faq__list {
+
+}
+
+.spatial__resources {
+
+}
+
+.spatial-resources__title {
+
+}
+
+.spatial-resources__subtitle {
+
+}
+
+.spatial-resources__list {
+
+}
+
+.spatial__inventory {
+
+}
+
+.spatial-inventory__title {
+
+}
+
+// leaving as reminder that styles currently copied
+.maker-inventory__list {
+
+}
+
+.spatial__people {
+
+}
+
+.spatial-people__title {
+
+}
+
+.spatial-people__list {
+
+}
+
+.spatial-people__person {
+
+}
+
+.spatial-person__img {
+
+}
+
+.spatial-person__name {
+
+}
+
+.spatial-person__position {
+
+}
+
+.spatial__inclusion-note {
+
+}
+
+.spatial-inclusion__title {
+
+}
+
+.spatial-inclusion__text {
+
+}
+
+.spatial__workshops {
+
+}
+
+.spatial-workshops__title {
+
+}
+
+.spatial-workshops__list {
+
+}
+
+.spatial-workshop__title {
+
+}
+
+.spatial-workshop__logistics {
+
+}
+
+.spatial-workshop__cta {
+
+}
+
+.spatial__showcase {
+
+}
+
+.spatial-showcase__title {
+
+}
+
+.spatial-showcase__subtitle {
+
+}
+
+.spatial-showcase__list {
+
+}
+
+.spatial-showcase__project {
+
+}
+
+.spatial-showcase__cta {
+
+}
